--- a/frontend/src/Components/SignUp.css
+++ b/frontend/src/Components/SignUp.css
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 420px;
+    max-width: 420px;
+    width: 60vw;
     gap: 1rem;
     /* background: none; */
     
