--- a/frontend/src/Components/Signin.css
+++ b/frontend/src/Components/Signin.css
@@ -63,7 +63,7 @@
 }
 
 h2 {
-  background: linear-gradient(135deg, #38bdf8, #8b5cf6, #06b6d4);
+  background: linear-gradient(135deg, #5d68fe, #0663d4);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
